third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/overwrite-09.stderr
TOML parse error at line 5, column 1
  |
5 | nested.inline-t.nest = 2
  | ^
duplicate key `nested`
